fixed(all):problems

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       body {
         margin: 0;
       }
+      a {
+        text-decoration: none;
+        color: black;
+      }
     </style>
   </head>
   <body>
@@ -25,12 +29,12 @@
       line-height: 1.7;
       background-color: #888797;
     ">
-      <p>我的第一个网站</p>
-      <p>我的第一个网站</p>
-      <p>我的第一个网站</p>
-      <p>我的第一个网站</p>
-      <p>我的第一个网站</p>
-      <p>我的第一个网站</p>
+      <p><a href="demo.html">我的第一个网站</a></p>
+      <p><a href="demo.html">我的第一个网站</a></p>
+      <p><a href="demo.html">我的第一个网站</a></p>
+      <p><a href="demo.html">我的第一个网站</a></p>
+      <p><a href="demo.html">我的第一个网站</a></p>
+      <p><a href="demo.html">我的第一个网站</a></p>
     </div>
     <div style = "
       background-color: #E9DEE2;
