--- a/css_cardtest.html
+++ b/css_cardtest.html
@@ -21,11 +21,11 @@
          ZO50 1MU<br>
         <strong>Tel</strong>: 01234 567 890<br>
         <strong>Mail</strong>: chris@nothere.com</p>
-    </article>
+        <footer style="display:flex; align-items: bottom;">
+          <p>Editing, writing, and web development services</p>
+        </footer>
+      </article>
     
-    <footer>
-      <p>Editing, writing, and web development services</p>
-    </footer>
   </section>
 
   </body>
