--- a/example_html/HTML/day_one.html
+++ b/example_html/HTML/day_one.html
@@ -1,2 +1,75 @@
-# HTML learning through w3school
-## DAY01
+<!DOCTYPE html>
+<html lang="zh-cn">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="Author" content="Karene Pitaya" />
+    <meta name="description" content="A little test" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="style_one.css" rel="stylesheet" />
+  </head>
+
+  <body>
+    <!--HTML IMAGE-->
+    <!--图片浮动，变成与内联元素相当的盒子，
+    所以很容易溢出父级盒子；相当于在父
+    级块盒子上浮动（物理意义的`on`）遇
+    到文字会环绕，碰到其他的浮动元素按
+    照各个浮动属性值以及上下层关系排列;
+    <div style="
+    background-color: pink; 
+    margin: 10px;">
+        <img src="../../images/770_770.jpg" alt="picture here" title="test" style="width: 100px;">
+        <h2 style="background-color: darkolivegreen;">forexample ksajdksj sndsjn sdsjh shdjs sdhsuhd sdhus sdhuhs sdhsuh ueui</h2>
+    </div>
+    <div style="
+    background-color: pink; 
+    margin: 10px;border: 
+    2px solid black;">
+        <img src="../../images/770_770.jpg" alt="picture here" title="test" style="width: 100px;">
+        <h2 style="background-color: darkolivegreen;">forexample ksajdksj sndsjn sdsjh shdjs sdhsuhd sdhus sdhuhs sdhsuh ueui</h2>
+        <div style="
+        background-color: pink; 
+        margin: 10px;
+        border: 2px solid rgb(158, 5, 5);">
+            <img src="../../images/770_770.jpg" alt="picture here" title="test" style="width: 100px;">
+            <h2 style="background-color: darkolivegreen;">forexample ksajdksj sndsjn sdsjh shdjs sdhsuhd sdhus sdhuhs sdhsuh ueui</h2>
+            <div style="
+            background-color: pink; 
+            margin: 10px;border: 
+            2px solid rgb(64, 8, 101);
+            overflow: auto;">解决图片溢出
+                <img src="../../images/770_770.jpg" alt="picture here" title="test" style="width: 100px;float: right;">
+                <h2 style="
+                background-color: 
+                darkolivegreen;
+                float: left;">forexampleueui</h2>
+                <h3>dh sj hsjdhjs dh jsdhs j d</h3>
+            </div>
+        </div>
+    </div>
+    <section>
+      <div class="box">
+        <div class="float">I am a floated box!</div>
+        <p>I am content inside the container.</p>
+      </div>
+    </section>
+    <section>
+      <div class="box" style="overflow: auto">
+        <div class="float">I amsghd dshdsjs dshdshgdsd dsfdsgfdsf jsddhs sdhfdsgfhdsgh sdhsdfhgds dhdhsgfhsgd dhhsgdfhgsdh dhgdgfhgd dhdgshfdsh dshdsgfhgdsh dsghsdghgf  a floated box!</div>
+        <p>I am content inside the <code>overflow:auto</code> container.</p>
+      </div>
+    </section>
+    <section>
+      <div class="box" style="display: flow-root;">
+        <div class="float" >I am a floated boxdshg dshgdshgh dsghdgs sdguw wuwhd whuuswh sgugygdwd dhshduhsd dwudhuhwudhwd dhusdhuw dsuhdushdu hsudhusdh dhushduh hsudsh sdhusdhbdsjdjs !</div>
+        <p >I am content inside the <code>display:flow-root</code> container.</p>
+      </div>
+    </section>
+    <div class="wrapper">
+        <p class="black">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus sit amet diam. Duis mattis varius dui. Suspendisse eget dolor.</p>
+        <p class="red">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+        <p class="left">This paragraph clears left.</p>
+      </div>-->
+
+  </body>
+</html>
