--- a/example_html/HTML/day_two.html
+++ b/example_html/HTML/day_two.html
@@ -11,6 +11,7 @@
         color: red;
         font-family: arial, "Trebuchet MS", Verdana, sans-serif;
         font-size: 1.4rem;
+        line-height: 1.4;
       }
       html {
         font-size: 10px;
@@ -45,6 +46,41 @@
 
       dd {
         margin-bottom: 1.5rem;
+      }
+      body {
+        width: 300px;
+        margin: 0 auto;
+        font-size: 1.2rem;
+        font-family: sans-serif;
+      }
+
+      a {
+        outline:none;
+        text-decoration: none;
+        padding: 2px 1px 0;
+      }
+
+      a:link {
+        color: #265301;
+      }
+
+      a:visited {
+        color: #437a16;
+      }
+
+      a:focus {
+        border-bottom: 1px solid;
+        background: #bae498;
+      }
+
+      a:hover {
+        border-bottom: 1px solid;
+        background: #cdfeaa;
+      }
+
+      a:active {
+        background: #265301;
+        color: #cdfeaa;
       }
     </style>
   </head>
@@ -163,8 +199,13 @@
         for reference.
       </p>
 
-      <ul style="list-style-type:square;border: 1px solid rgb(184, 184, 184);
-      list-style-image:url(../images/icons8-black-blood-24.png)">
+      <ul
+        style="
+          list-style-type: square;
+          border: 1px solid rgb(184, 184, 184);
+          list-style-image: url(../images/icons8-black-blood-24.png);
+        "
+      >
         <li>Humous</li>
         <li>Pitta</li>
         <li>Green salad</li>
@@ -179,7 +220,10 @@
         for reference.
       </p>
 
-      <ol style="list-style-type:upper-roman; list-style-position: inside;" reversed>
+      <ol
+        style="list-style-type: upper-roman; list-style-position: inside"
+        reversed
+      >
         <li>Toast pitta, leave to cool, then slice down the edge.</li>
         <li>
           Fry the halloumi in a shallow, non-stick pan, until browned on both
@@ -197,7 +241,7 @@
         for reference.
       </p>
 
-      <dl >
+      <dl>
         <dt>Humous</dt>
         <dd>
           A thick dip/sauce generally made from chick peas blended with tahini,
@@ -215,6 +259,18 @@
           That green healthy stuff that many of us just use to garnish kebabs.
         </dd>
       </dl>
+    </div>
+    <div class="link">
+      <h1>This is a test for hyperlink</h1>
+      <p>
+        There are several browsers available, such as
+        <a href="https://www.mozilla.org/zh-CN/firefox/">Mozilla Firefox</a>,
+        <a href="https://www.google.com/chrome/index.html">Google Chrome</a>,
+        and
+        <a href="https://www.microsoft.com/zh-CN/windows/microsoft-edge"
+          >Microsoft Edge</a
+        >.
+      </p>
     </div>
   </body>
 </html>
