--- a/example_html/test-font/web-font-start.html
+++ b/example_html/test-font/web-font-start.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Web font example</title>
-    <link href="webfont.css" rel="stylesheet" type="text/css">
+    <link href="web-font-start.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Hipster ipsum is the best</h1>
