--- a/example_html/test-font/font/sourcecodepro-regular-demo.html
+++ b/example_html/test-font/font/sourcecodepro-regular-demo.html
@@ -61,12 +61,12 @@
 
     <style type="text/css">
         		body {
-			font-family: 'source_sans_probold';
+			font-family: 'source_code_proregular';
         		}
 
             </style>
 
-    <title>Source Sans Pro Bold Specimen</title>
+    <title>Source Code Pro Regular Specimen</title>
 
 
     <script type="text/javascript" charset="utf-8">
@@ -79,7 +79,7 @@
 <body>
 <div id="container">
     <div id="header">
-		Source Sans Pro Bold    </div>
+		Source Code Pro Regular    </div>
     <ul class="tabs">
         <li><a href="#specimen">Specimen</a></li>
         <li><a href="#layout">Sample Layout</a></li>
@@ -182,7 +182,7 @@
                     <div class="georgiabody">body</div>
                 </div>
                 <div class="fontbody" style="z-index:1">
-                    body<span>Source Sans Pro Bold</span>
+                    body<span>Source Code Pro Regular</span>
                 </div>
                 <div class="arialbody" style="z-index:1">
                     body<span>Arial</span>
@@ -380,11 +380,11 @@
                 <div class="grid12 firstcol">
 
                     <h1>Language Support</h1>
-                    <p>The subset of Source Sans Pro Bold in this kit supports the following languages:<br/>
+                    <p>The subset of Source Code Pro Regular in this kit supports the following languages:<br/>
 
 						Albanian, Basque, Breton, Chamorro, Danish, Dutch, English, Faroese, Finnish, French, Frisian, Galician, German, Icelandic, Italian, Malagasy, Norwegian, Portuguese, Spanish, Alsatian, Aragonese, Arapaho, Arrernte, Asturian, Aymara, Bislama, Cebuano, Corsican, Fijian, French_creole, Genoese, Gilbertese, Greenlandic, Haitian_creole, Hiligaynon, Hmong, Hopi, Ibanag, Iloko_ilokano, Indonesian, Interglossa_glosa, Interlingua, Irish_gaelic, Jerriais, Lojban, Lombard, Luxembourgeois, Manx, Mohawk, Norfolk_pitcairnese, Occitan, Oromo, Pangasinan, Papiamento, Piedmontese, Potawatomi, Rhaeto-romance, Romansh, Rotokas, Sami_lule, Samoan, Sardinian, Scots_gaelic, Seychelles_creole, Shona, Sicilian, Somali, Southern_ndebele, Swahili, Swati_swazi, Tagalog_filipino_pilipino, Tetum, Tok_pisin, Uyghur_latinized, Volapuk, Walloon, Warlpiri, Xhosa, Yapese, Zulu, Latinbasic, Ubasic, Demo                    </p>
                     <h1>Glyph Chart</h1>
-                    <p>The subset of Source Sans Pro Bold in this kit includes all the glyphs listed below. Unicode entities are included above each glyph to help you insert individual characters into your layout.</p>
+                    <p>The subset of Source Code Pro Regular in this kit includes all the glyphs listed below. Unicode entities are included above each glyph to help you insert individual characters into your layout.</p>
                     <div id="glyph_chart">
 
 																				                                <div><p>&amp;#32;</p>&#32;</div>
@@ -613,10 +613,9 @@
 																				                                <div><p>&amp;#8287;</p>&#8287;</div>
 																				                                <div><p>&amp;#8364;</p>&#8364;</div>
 																				                                <div><p>&amp;#8482;</p>&#8482;</div>
+																				                                <div><p>&amp;#9724;</p>&#9724;</div>
 																				                                <div><p>&amp;#64257;</p>&#64257;</div>
 																				                                <div><p>&amp;#64258;</p>&#64258;</div>
-																				                                <div><p>&amp;#64259;</p>&#64259;</div>
-																				                                <div><p>&amp;#64260;</p>&#64260;</div>
 																																																										                    </div>
                 </div>
 
