--- a/example_html/css_layout/分列/column.html
+++ b/example_html/css_layout/分列/column.html
@@ -4,6 +4,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>My test page</title>
+    <style>
+      .container {
+        column-width: 250px;
+        column-gap: 20px;
+      }
+
+      .card {
+        break-inside: avoid;
+        page-break-inside: avoid;
+        background-color: rgb(207, 232, 220);
+        border: 2px solid rgb(79, 185, 227);
+        padding: 10px;
+        margin: 0 0 1em 0;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
